# BichselTmp

silicon-trainb/: .run1.mac.swp  CMakeLists.txt  GNUmakefile  run1.mac  silicon.cc  vis.mac
silicon-trainb/include/: DetectorConstruction.hh  DetectorMessenger.hh  MyBichselTool.hh  MyDigi.hh  MyDigitizer.hh  MyEventAction.hh  MyPrimaryGeneratorAction.hh  MyPrimaryGeneratorMessenger.hh  MyRunAction.hh  MyTrackerHit.hh  MyTrackerSD.hh  RecordDigits.hh  RecordHits.hh
silicon-trainb/src/: DetectorConstruction.cc  DetectorMessenger.cc  MyBichselTool.cc  MyDigi.cc  MyDigitizer.cc  MyEventAction.cc  MyPrimaryGeneratorAction.cc  MyPrimaryGeneratorMessenger.cc  MyRunAction.cc  MyTrackerHit.cc  MyTrackerSD.cc  PhysicsList.cc  PhysicsListMessenger.cc  RecordDigits.cc  RecordHits.cc
